# sample_project

.claude/: settings.local.json
main/: CMakeLists.txt  DEV_Config.cpp  DEV_Config.h  Debug.h  EPD_2in9g.h  epd_lvgl_drv.c  epd_lvgl_drv.h  idf_component.yml  main.cpp  top_banner.h  ui.c  ui.h
main/screens/: ui_Screen1.c
tools/: bitmap_data.txt  countdown_data.txt  countdown_err.txt  gen_bitmap.py  gen_countdown.py  render_font.py  render_text.py
