idf_component_register(SRCS "epd_lvgl_drv.c" "main.cpp"
                    "DEV_Config.cpp"
                    "EPD_2in9g.cpp"
                    "GUI_Paint.cpp"
                    "ImageData.cpp"
                    "font8.cpp"
                    "font12.cpp"
                    "font12CN.cpp"
                    "font16.cpp"
                    "font20.cpp"
                    "font24.cpp"
                    "font24CN.cpp"
                    "ui.c"
                    "ui_helpers.c"
                    "screens/ui_Screen1.c"
                    "components/ui_comp_hook.c"
                    INCLUDE_DIRS "." "screens" "components")
